# features

./: .gitignore  README.md
feature2d/: CMakeLists.txt  main.cpp
feature2d/.kdev4/: feature2d.kdev4
feature2d/data/: scan001  数据说明.txt
harris/: CMakeLists.txt  geometrydescriptor.cpp  harris.kdev4  main.cpp
harris/.kdev4/: harris.kdev4
lfcornerextrator/: CMakeLists.txt  main.cpp
lfcornerextrator/.kdev4/: lfcornerextrator.kdev4
narf/: CMakeLists.txt  fileread.hpp  learnRangImg.cpp  main.cpp  types.hpp
narf/.kdev4/: narf.kdev4
